--- a/dash/templates/dash/delete_dashboard_workspace_ajax.html
+++ b/dash/templates/dash/delete_dashboard_workspace_ajax.html
@@ -14,9 +14,9 @@
                 </li>
                 <li class="buttons control-group">
                     <div class="controls">
-                        <button type="submit" name="delete" class="btn btn-warning">{% trans "Delete" %}</button>
+                        <button type="submit" name="delete" class="btn white red-text">{% trans "Delete" %}</button>
                         <input type="hidden" name="next" value="{% url 'dash.edit_dashboard' workspace.slug %}" />
-                        <button type="submit" class="btn">{% trans "Cancel" %}</button>
+                        <button type="submit" class="btn blue">{% trans "Cancel" %}</button>
                     </div>
                 </li>
             </ul>
