--- a/dash/templates/dash/add_dashboard_entry_ajax.html
+++ b/dash/templates/dash/add_dashboard_entry_ajax.html
@@ -1,14 +1,14 @@
 {% load i18n %}
 <div class="container">
     <div class="row">
-        <div class="col s12">
+        <div class="col l4 s12 offset-l4">
             <div class="wrapper-bg"></div>
             <div class="hero-unit-small">
                 <h2 class="content-title">{% blocktrans with plugin.name as plugin_name %}Add {{ plugin_name }} to
                     Dashboard{% endblocktrans %}</h2>
             </div>
         </div>
-        <div class="col s12">
+        <div class="col l4 s12 offset-l4">
             {% if user_services and user_services < 2 %}
                 <p>¡Necesitas al menos dos servicios activos para crear un trigger!</p>
                 <p><a href="{% url 'user_services' %}">Activar servicios</a></p>
@@ -27,13 +27,13 @@
 
                     {% if wizard.steps.prev %}
                         <button name="wizard_goto_step" type="submit"
-                                class="btn"
+                                class="btn blue left"
                                 value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
                         <button name="wizard_goto_step" type="submit"
-                                class="btn"
+                                class="btn blue left"
                                 value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
                     {% endif %}
-                    <input clsas="btn" type="submit" value="{% trans "submit" %}"/>
+                    <input class="btn blue right" type="submit" value="{% trans "submit" %}"/>
                     {% include "dash/snippets/plugin_help_text.html" %}
                 </form>
             {% endif %}
