--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -27,7 +27,9 @@
             </a>
         </div>
         <div class="plugin-content-wrapper">
-            {{ plugin.render }}
+            {% with plugin.render as rendered %}
+                {% if rendered %}{{ rendered }}{% endif %}
+            {% endwith %}
         </div>
     </div>
 {% endfor %}
