--- a/skyfolk/static/css/dashboard.css
+++ b/skyfolk/static/css/dashboard.css
@@ -30,4 +30,9 @@
   width: 100%;
   height: 100%; }
 
+.plugin-content-wrapper iframe {
+  width: 100%;
+  height: 100%;
+  max-width: 100%; }
+
 /*# sourceMappingURL=dashboard.css.map */
