--- a/skyfolk/static/sass/dashboard.sass
+++ b/skyfolk/static/sass/dashboard.sass
@@ -29,3 +29,8 @@
 .plugin-content-wrapper img
   width: 100%
   height: 100%
+
+.plugin-content-wrapper iframe
+  width: 100%
+  height: 100%
+  max-width: 100%
