+ Mostrandi widgets en inicio

--- a/dash/contrib/plugins/service/templates/service/render.html
+++ b/dash/contrib/plugins/service/templates/service/render.html
@@ -4,7 +4,7 @@
             <div class="widget-wr">
                 <div class="row widget-title blue white-text">
                     <div class="col s12">
-                        <h4 class="flow-text">{{ plugin.data.description }}</h4>
+                        <h4 class="flow-text">{{ plugin.data.description }} // {{ plugin.user }}</h4>
                     </div>
                 </div>
                 {% for item in results %}
