--- a/dash/contrib/plugins/url/templates/url/render.html
+++ b/dash/contrib/plugins/url/templates/url/render.html
@@ -4,7 +4,7 @@
             <div class="widget-wr">
                 <div class="row widget-title blue white-text">
                     <div class="col s12">
-                        <h4 class="flow-text">{{ plugin.data.title }}</h4>
+                        <h4 class="flow-text">{{ plugin.data.title }} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a></h4>
                     </div>
                 </div>
                 <a href="{{ plugin.data.url }}" title="{{ plugin.data.title }}"{% if plugin.data.external %}
