+ Integracion de pines [ALPHA] lista

--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -24,7 +24,11 @@
 }
 </style>
 {% endblock %}
-
+{% block extra-js %}
+{% for script in js %}
+    <script src="{% static script %}" type="text/javascript"></script>
+{% endfor %}
+{% endblock %}
 {% block content %}
 <div class="container" id="my-feed">
     <div class="row">
@@ -331,7 +335,7 @@
                                                 </div>
                                                 <div class="col l8 m8 s8 legend-user-data">
                                                     <a href="/profile/{{ item.owner }}">@{{ item.owner }}</a>
-                                                    <i class="photo-title truncate">{{ item.title }}</i>
+                                                    <a href="{% url "photologue:pl-video" item.slug %}" class="photo-title truncate">{{ item.name }}</a>
                                                     <i class="truncate photo-date"><i class="material-icons md-18">access_time</i> {{ item.date_added|naturaltime }}</i>
                                                 </div>
                                             </div>
