--- a/dash/contrib/plugins/image/templates/image/render.html
+++ b/dash/contrib/plugins/image/templates/image/render.html
@@ -1,5 +1,13 @@
 {% load i18n thumbnail %}
-            <p>
+<div class="col s12">
+    <div class="stock card">
+        <div class="wrapper">
+            <div class="widget-wr">
+                <div class="row widget-title blue white-text">
+                    <div class="col s12">
+                        <h4 class="flow-text">{{ plugin.data.title }} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a></h4>
+                    </div>
+                </div>
                 {% if plugin.data.show_link %}
                 <a href="{{ MEDIA_URL }}{{ plugin.data.image }}" title="{{ plugin.data.title }}">
                 {% endif %}
@@ -16,4 +24,7 @@
                 {% if plugin.data.show_link %}
                 </a>
                 {% endif %}
-            </p>
+            </div>
+        </div>
+    </div>
+</div>
