--- a/dash/contrib/plugins/memo/templates/memo/render.html
+++ b/dash/contrib/plugins/memo/templates/memo/render.html
@@ -1,3 +1,14 @@
-
-                {% if plugin.data.title %}<h1>{{ plugin.data.title }}</h1>{% endif %}
+<div class="col s12">
+    <div class="stock card">
+        <div class="wrapper">
+            <div class="widget-wr">
+                <div class="row widget-title blue white-text">
+                    <div class="col s12">
+                        <h4 class="flow-text">{{ plugin.data.title }} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a></h4>
+                    </div>
+                </div>
                 <p>{{ plugin.data.text }}</p>
+            </div>
+        </div>
+    </div>
+</div>
