--- a/dash/templates/dash/base.html
+++ b/dash/templates/dash/base.html
@@ -122,8 +122,7 @@
                                                            title="Workspace {{ ws.name }}">
                                                             <p class="flow-text">
                                                                 <span class="material-icons">dashboard</span>
-                                                                <span>{{ ws.name }}</span> -
-                                                                <span>{{ ws.layout_uid }}</span>
+                                                                <span>{{ ws.name }}</span>
                                                             </p>
                                                         </a>
                                                     </div>
