--- a/dash/templates/dash/plugin_widgets_ajax.html
+++ b/dash/templates/dash/plugin_widgets_ajax.html
@@ -1,41 +1,47 @@
 {% load i18n %}
 
-<div class="generic-content-wrapper">
-    <div class="wrapper-bg"></div>
+<div class="container">
     <div class="row">
-        <h2>Añadir nuevo widget.</h2>
-    </div>
-
-    <div class="row">
-        {% if paste_from_clipboard_url %}
-            <div class="paste-from-clipboard">
-                <a href="{{ paste_from_clipboard_url }}">
-                    <span class="material-icons">content_paste</span>
-                    <span>{% trans "Paste from clipboard" %}</span>
-                </a>
+        <div class="col s12">
+            <div class="wrapper-bg"></div>
+            <div class="row center">
+                <h2>Añadir nuevo widget.</h2>
             </div>
-        {% endif %}
-        <div class="divider"></div>
-        <ul class="collapsible" data-collapsible="accordion">
-            {% for group,widgets in grouped_widgets.items %}
-                <li>
-                    <div class="collapsible-header"><span class="flow-text">{{ group }}</span></div>
-                    <div class="collapsible-body">
-                        <div class="row">
-                            <ul class="collection">
-                                {% for uid, name, url in widgets %}
+
+            <div class="row">
+                {% if paste_from_clipboard_url %}
+                <div class="paste-from-clipboard">
+                    <a href="{{ paste_from_clipboard_url }}">
+                        <span class="material-icons">content_paste</span>
+                        <span>{% trans "Paste from clipboard" %}</span>
+                    </a>
+                </div>
+                {% endif %}
+                <div class="divider"></div>
+                <ul class="collapsible" data-collapsible="accordion">
+                    {% for group,widgets in grouped_widgets.items %}
+                    <li>
+                        <div class="collapsible-header"><span class="flow-text">{{ group }}</span></div>
+                        <div class="collapsible-body">
+                            <div class="row">
+                                <ul class="collection">
+                                    {% for uid, name, url in widgets %}
                                     <li>
                                         <a class="collection-item" href="{{ url }}" class="widget widget-{{ uid }}">{{ name }}</a>
                                     </li>
-                                {% endfor %}
-                            </ul>
+                                    {% endfor %}
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
+
+
 <script>
     $(document).ready(function () {
         $('.collapsible').collapsible();
