--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -68,10 +68,12 @@
                                                                 <div class="row">
                                                                     {% for image in images %}
                                                                         <div class="col l4 s12">
+                                                                            <a href="{{ image.image.url }}">
                                                                             <img class="lazyload responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
+                                                                             </a>
                                                                         </div>
                                                                     {% endfor %}
                                                                 </div>
@@ -146,10 +148,12 @@
                                                                 <div class="row">
                                                                     {% for image in images %}
                                                                         <div class="col l4 s12">
+                                                                            <a href="{{ image.image.url }}">
                                                                             <img class="lazyload responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
                                                                                  title="Imagen de: {{ node.author }}">
+                                                                             </a>
                                                                         </div>
                                                                     {% endfor %}
                                                                 </div>
@@ -205,10 +209,12 @@
                                                 <div class="row images">
                                                     {% for image in images %}
                                                         <div class="col l4 s12 z-depth-2 center">
+                                                            <a href="{{ image.image.url }}">
                                                             <img class="lazyload responsive-img"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
                                                                  title="Imagen de: {{ node.author }}">
+                                                             </a>
                                                         </div>
                                                     {% endfor %}
                                                 </div>
