+ Importar signals para user_groups

--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -57,7 +57,7 @@
                 {% if interests %}
                 <div class="interests">
                     {% for i in interests %}
-                        <span class="chip">{{ i.title }}</span>
+                        <span class="chip">{{ i.name }}</span>
                     {% endfor %}
                 </div>
                 {% endif %}
