--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -11,9 +11,11 @@
                 {% if photo.tags.all %}
                     <div class="tags-content">
                         {% for tag in photo.tags.all %}
+                        {% if tag.slug and tag.slug|length > 0 %}
                             <blockquote><a
                                     href="{% url 'photologue:collection-list' username=photo.owner.username tag_slug=tag.slug %}">{{ tag.slug }}</a>
                             </blockquote>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 {% endif %}
