--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -284,8 +284,10 @@
                                             {% if item.tags.all %}
                                             <div class="tags-content">
                                                 {% for tag in item.tags.all %}
+                                                    {% if tag and tag.split %}
                                                 <blockquote
                                                 onclick="location.href='{% url 'photologue:collection-list' item.owner tag.slug %}'">{{ tag.slug }}</blockquote>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </div>
                                             {% endif %}
@@ -313,8 +315,10 @@
                                             {% if item.tags.all %}
                                             <div class="tags-content">
                                                 {% for tag in item.tags.all %}
+                                                    {% if tag and tag.split %}
                                                 <blockquote
                                                 onclick="location.href='{% url 'photologue:collection-list' item.owner tag.slug %}'">{{ tag.slug }}</blockquote>
+                                                    {% endif %}
                                                 {% endfor %}
                                             </div>
                                             {% endif %}
