--- a/photologue/templates/photologue/photo_gallery_page.html
+++ b/photologue/templates/photologue/photo_gallery_page.html
@@ -11,7 +11,7 @@
                 {% if photo.tags.all %}
                     <div class="tags-content">
                         {% for tag in photo.tags.all %}
-                        {% if tag.slug and tag.slug|length > 0 %}
+                        {% if tag.slug and tag.split %}
                             <blockquote><a
                                     href="{% url 'photologue:collection-list' username=photo.owner.username tag_slug=tag.slug %}">{{ tag.slug }}</a>
                             </blockquote>
