--- a/photologue_groups/templates/photologue_groups/photo_gallery_page.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery_page.html
@@ -11,9 +11,11 @@
                 {% if photo.tags.all %}
                     <div class="tags-content">
                         {% for tag in photo.tags.all %}
+                            {% if tag and tag.split %}
                             <blockquote><a
                                     href="{% url 'photologue_groups:collection-list' slug=photo.group.slug tag_slug=tag.slug %}">{{ tag.name }}</a>
                             </blockquote>
+                            {% endif %}
                         {% endfor %}
                     </div>
                 {% endif %}
