--- a/skyfolk/templates/channels/new_photo_group_gallery.html
+++ b/skyfolk/templates/channels/new_photo_group_gallery.html
@@ -7,8 +7,10 @@
             {% if photo.tags.all %}
                 <div class="tags-content">
                     {% for tag in photo.tags.all %}
+                        {% if tag and tag.split %}
                         <blockquote
                                 onclick="location.href='{% url 'photologue_groups:collection-list' photo.owner.username tag.slug %}'">{{ tag.name }}</blockquote>
+                        {% endif %}
                     {% endfor %}
                 </div>
             {% endif %}
